# resonance

./: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  AUDIT_INDEX.md  CANONICALIZATION_AUDIT.md  CLASSICAL_ANALYSIS.md  CLEANUP_AUDIT.md  CLEANUP_SUMMARY.md  CONSOLIDATED_AUDIT.md  FEATURE_STATUS.md  FINAL_STATUS.md  GOLDEN_CORPUS.md  GOLDEN_CORPUS_ROADMAP.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE_A2_FINDINGS.md  PROGRESS.md  README.md  RESONANCE_PLAN.md  Resonance_DESIGN_SPEC.md  TDD_TODO.md  TDD_TODO_V2.md  TDD_TODO_V3.md  TDD_TODO_V3_05.md  TDD_TODO_V3_1.md  TDD_TODO_V4.md  TDD_TODO_V5.md  TDD_V3.1_PLAN.md  TESTING_SUMMARY.md  TEST_AUDIT.md  TEST_TODO_V2.md  TODO.md  TODO_REVIEW_V3.md  TODO_new.md  V3.1_IMPLEMENTATION_GUIDE.md  V3_TEST_AUDIT.md  coverage.json  mypy.ini  (+7 more)
.archive/: TDD_TODO_V1.md  V2_CLOSURE.md
.archive/audits-2025-12-21/: AUDIT_SUMMARY.md  GOLDEN_CORPUS_ROADMAP.md  V3_TEST_AUDIT.md
docs/: LINT_REPORT.md  Resonance_DESIGN_SPEC.md  TYPECHECK_REPORT.md
docs/process/: GOVERNANCE.md  GOVERNANCE_MIN.md  V3.1_REAL_CORPUS_MANUAL.md
docs/specs/: V3.1_SPEC.md  (+1 more)
resonance/: __init__.py  app.py  cli.py  errors.py  settings.py
scripts/: corpus_decide.py  corpus_decide_real.py  corpus_decide_real_interactive.py  corpus_decide_real_replay.py  corpus_summary.py  export_real_corpus_cache.py  extract_real_corpus.sh  generate_review_bundle.py  generate_review_interface.py  regen_golden.py  simple_generate_interface.py  snapshot_real_corpus.sh  validate_real_corpus.py
tests/: README.md  TEST_SCENARIOS.md  conftest.py
(+265 files in other folders)
